<resources>
    <string name="app_name">School Gudarder</string>
    <string name="text_main_tab1">HOME</string>
    <string name="text_main_tab2">LOCATION</string>
    <string name="text_main_tab3">WeChat</string>
    <string name="text_main_tab4">MY</string>
    <string name="loading">Loading&#8230;</string>
    <string name="text_tips">Notice</string>
    <string name="text_ok">Done</string>
    <string name="cancel">Cancel</string>
    <string name="back">Back</string>
    <string name="network_error1">Delete failed, please try again later</string>
    <string name="text_login_failed">Login failed! Please check your password or acount.</string>
    <string name="text_data_failed">Can not submit some important datas, please login again!</string>
    <string name="text_access_device_failed">Access the device failed! Please try it again.</string>
    <string name="text_input_loginname">Please input your loginName first!</string>
    <string name="text_input_pwd">Please input your password first!</string>
    <string name="tips_no_data">No Data</string>
    <string name="nearby">nearby</string>
    <string name="text_unkonw_err">Unkonw Error! Please try it again!</string>
    <string name="text_login">Sign In</string>
    <string name="text_no_login_history">No sign in history here!</string>
    <string name="text_add">Add</string>
    <string name="fens_info">Electronic Crawl</string>
    <string name="a">Early Childhood Education</string>
    <string name="a1">Job Notification</string>
    <string name="about_copy_right">Copyright of CityEasy</string>
    <string name="about_copy_right_time">Copyright@2010-2020 CityeEasy.</string>
    <string name="about_right">All Rights Reserved.</string>
    <string name="current_version">Current Version:</string>
    <string name="text_account">Account</string>
    <string name="text_password">Password</string>
    <string name="text_e_zone">E-Zone</string>
    <string name="text_phone_books">Phone Books</string>
    <string name="text_check_class">Check Records</string>
    <string name="text_alerts">My Aclock</string>
    <string name="text_my_school">My School</string>
    <string name="text_children">Children Protecter</string>
    <string name="text_home_work_notice">Homework Notice</string>
    <string name="text_home_work_score">Exam Score</string>
    <string name="text_steps">Steps</string>
    <string name="text_vacations">Ask For Leave</string>
    <string name="text_my_class">My Class</string>
    <string name="ago_sec"> Secs Ago</string>
    <string name="ago_min"> Mins Ago</string>
    <string name="ago_hour"> Hours Ago</string>
    <string name="ago_day"> Days Ago</string>
    <string name="ago_mouth"> Months Ago</string>
    <string name="ago_year"> Years Ago</string>
    <string name="text_locate_type">%1$sLocate Type:%2$s&#160;%3$s</string>
    <string name="text_battery">%1$sPower:%2$s&#160;%3$s</string>
    <string name="text_loc_time">%1$sLocate Time:%2$s&#160;%3$s</string>
    <string name="text_loc_address">Address:&#160;</string>
    <string name="text_dev_status">%1$sDevice Status:%2$s&#160;%3$s%4$s%5$s</string>
    <string name="text_off_line">Off-Line</string>
    <string name="text_on_line">On-Line</string>
    <string name="text_track">Play Track</string>
    <string name="text_follow">Follw Online</string>
    <string name="text_e_zone_name">E_Zone Name</string>
    <string name="text_area_edit">[Click to edit]</string>
    <string name="text_area_sure">Set for safe zone</string>
    <string name="clear">Clear</string>
    <string name="enter_warn">Into the electronic fence alarm</string>
    <string name="leave_warn">The electronic fence alarm</string>
    <string name="enter_leave_warn">In and out of the electronic fence alarm</string>
    <string name="text_tips_input_zone_name">Input the E_zone name first!</string>
    <string name="text_tips_zone_name_exits">The E_zone name alredy exits!</string>
    <string name="text_points_too_less">Please at least select three points to make a area!</string>
    <string name="text_no_user_msg">Current user messages are error!</string>
    <string name="draw_electronicfence">Please draw the electronic fence on the map!</string>
    <string name="text_zone_add_success">The E_zone add successful!</string>
    <string name="text_delete_zone">Are you sure to delete this E_Zone？</string>
    <string name="name">Name</string>
    <string name="phone_num">Phone Number</string>
    <string name="text_added">Added</string>
    <string name="text_head">Head Picture</string>
    <string name="hint_please_input">Please Input&#8230;</string>
    <string name="text_carmera">Camera</string>
    <string name="text_photo">Gallery</string>
    <string name="text_not_null_phone">Cell-Phone Can Not Empty</string>
    <string name="hint_contact_exits">This Contact Already Here</string>
    <string name="tips_name_not_be_null">Name Can Not Be Null!</string>
    <string name="text_leave">Leave School</string>
    <string name="text_enter">Enter School</string>
    <string name="text_up_car">Get In School Bus</string>
    <string name="text_down_car">Get Out School Bus</string>
    <string name="text_no_colck">No Colck Datas yet!</string>
    <string name="text_save">Save</string>
    <string name="text_save_success">Clock Setting Save Successful！</string>
    <string name="text_kinship">Kinship Number</string>
    <string name="text_listener">Listen Number</string>
    <string name="text_sleep_on_time">Sleep On Time</string>
    <string name="text_fair_wall">Fair Wall</string>
    <string name="text_upload_time">Upload Space</string>
    <string name="text_voice_cmd">Voice CMD</string>
    <string name="text_scence_mode">Scene Mode</string>
    <string name="text_class_time">Class Time</string>
    <string name="text_gps">GPS</string>
    <string name="text_bluteeth">Bluteeth anti-lost</string>
    <string name="text_text_msg">Text Message</string>
    <string name="text_lock">Lock</string>
    <string name="text_search_dev">Search Device</string>
    <string name="text_loacte_fast">Fast Loaction</string>
    <string name="text_loacte_mode">Loaction Mode</string>
    <string name="text_remote">Remote</string>
    <string name="text_reset">Reset Device To Factory</string>
    <string name="text_cell_number">Cell-Number:&#160;&#160;&#160;&#160;%1$s</string>
    <string name="setting_number">Setting Number</string>
    <string name="dad">Dad</string>
    <string name="mom">Mom</string>
    <string name="sibling">Siblings</string>
    <string name="sos">SOS</string>
    <string name="text_input_phone_number">Input the number</string>
    <string name="text_device_on">Device On Time</string>
    <string name="text_device_off">Device Off Time</string>
    <string name="text_set_new_time">Set New Time</string>
    <string name="text_justy_time">Please confirm device on time must early than device off time!</string>
    <string name="text_sleep_time_success">Sleep time setting successful！</string>
    <string name="text_fairwall">Fair Wall Setting Successful！</string>
    <string name="text_fairwall_failed">Fair Wall Setting Failed！</string>
    <string name="text_find_device">Find Device CMD Sended！</string>
    <string name="text_find_locate">Located！</string>
    <string name="text_mode_set">Mode Setting</string>
    <string name="text_mode_1">Save Power Mode</string>
    <string name="text_mode_2">Route Mode</string>
    <string name="text_set_mode_success">Work Mode Change To %1$s</string>
    <string name="text_mode_power_off">Power-Off</string>
    <string name="text_mode_power_boot">Reboot</string>
    <string name="text_off_success">Power-Off Successful!</string>
    <string name="text_reboot_success">Reboot Successful!</string>
    <string name="text_remote_set">Remote Setting</string>
    <string name="text_send_reset">Reset Device CMD Sended！</string>
    <string name="tips_device_no_online">Device Offline!</string>
    <string name="parent_child">Pedometer</string>
    <string name="issue_task">Issue Task</string>
    <string name="step">Step</string>
    <string name="task_reward">Task Reward</string>
    <string name="task_complete">Task Complete</string>
    <string name="simple_task">Easy Task</string>
    <string name="medium_task">Medium Task</string>
    <string name="hard_task">Hard Task</string>
    <string name="target_task">Target Task:</string>
    <string name="task_progress">Task Progress</string>
    <string name="cash_rewards">Cash Rewards</string>
    <string name="cancel_rewards">Cancel Rewards</string>
    <string name="tips_task_no_completed">Currently There Is No Complete Tasks!</string>
    <string name="tips_into_current_task">Currently Task</string>
    <string name="tips_into_start_new_task">New Task</string>
    <string name="tips_task_reward">The Reward Of Your Child That The Task Completed Is:</string>
    <string name="tips_task_changed">Current Task Has Changed!</string>
    <string name="task">Task</string>
    <string name="text_numbr_3000">3000%1$s</string>
    <string name="text_numbr_6000">6000%1$s</string>
    <string name="text_numbr_12000">12000%1$s</string>
    <string name="text_off_title">Title:</string>
    <string name="text_off_reson">Deatils:</string>
    <string name="text_off_date">Date:</string>
    <string name="text_pass">Unagreed</string>
    <string name="text_reading">Uncheck</string>
    <string name="text_passed">Agreed</string>
    <string name="text_off_date1">Day-Off Date</string>
    <string name="text_off_reson1">Day-Off Reson</string>
    <string name="text_teacher_remark">Teacher Remark</string>
    <string name="text_sleave_title">Sleave Title</string>
    <string name="hint_sleave_title">Input the title</string>
    <string name="text_sleave_reason">Sleave Reason</string>
    <string name="hint_sleave_reason">Input the reason</string>
    <string name="text_sleave_start_time">Start Time Of Sleave</string>
    <string name="text_sleave_end_time">End Time Of Sleave</string>
    <string name="text_confrim_apply">Apply Now</string>
    <string name="text_not_early_than_today">Sorry, the times can\'t back, please chose a right time!</string>
    <string name="text_start_early_than_end">You must sure start time early than end time!</string>
    <string name="text_chose_time">Please select the sleave time then submit！</string>
    <string name="text_commited">Your apply comnit successful！</string>
    <string name="none_course">No classes</string>
    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    <string name="staturday">Sta</string>
    <string name="sunday">Sun</string>
    <string name="text_set">Settings</string>
    <string name="text_msg">Messages</string>
    <string name="text_info">Informations</string>
    <string name="text_notice">Send Notice</string>
    <string name="text_holoday">Get Off</string>
    <string name="text_subject">Subjects</string>
    <string name="text_myclass">My Class</string>
    <string name="text_myschedule">My Course</string>
    <string name="text_homework">Homework</string>
    <string name="text_change_pwd">Change Password</string>
    <string name="text_push">Push Message</string>
    <string name="text_feedback">Feedback</string>
    <string name="text_about">About us</string>
    <string name="text_exit">Logout</string>
    <string name="text_realse_homework">New Works</string>
    <string name="text_realse_homework_content">HomeWork Contents</string>
    <string name="hint_home_work">Please input the content of homework</string>
    <string name="text_chose_class">Chose Class</string>
    <string name="text_chose_subjects">Chose Subjects</string>
    <string name="text_chose_class_first">Chose Class First!</string>
    <string name="text_chose_subject_first">Chose Subject First!</string>
</resources>