<cn.yc.base.view.custom.percent.PercentLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/home_bg_color"
    android:orientation="vertical"
    tools:context="cc.manbu.schoolinfocommunication.fragments.AddSleaveFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <cn.yc.base.view.custom.percent.PercentLinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <!-- TODO: Update blank fragment layout -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_marginLeftPercent="4%w"
                app:layout_marginTopPercent="5%w"
                app:layout_marginBottomPercent="1.5%w"
                android:text="@string/text_sleave_title"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/id_edTitle"
                app:layout_widthPercent="92%w"
                android:layout_height="36dp"
                android:background="@drawable/white_bg"
                android:gravity="center"
                android:hint="@string/hint_sleave_title"
                android:maxLines="1"
                android:padding="5dp"
                android:layout_gravity="center"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_marginLeftPercent="4%w"
                android:text="@string/text_sleave_reason"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_marginBottomPercent="1.5%w"
                app:layout_marginTopPercent="5%w"/>

            <EditText
                android:id="@+id/id_edReason"
                android:layout_width="match_parent"
                app:layout_widthPercent="92%w"
                app:layout_heightPercent="70%w"
                android:layout_gravity="center"
                android:background="@drawable/white_bg"
                android:gravity="top|start"
                android:hint="@string/hint_sleave_reason"
                android:padding="5dp"
                android:textSize="16sp" />

            <cn.yc.base.view.custom.percent.PercentRelativeLayout
                android:layout_width="match_parent"
                app:layout_heightPercent="13%w"
                app:layout_marginTopPercent="3.5%w"
                android:background="@android:color/transparent">

                <TextView
                    android:id="@+id/id_tvStartTime"
                    app:layout_widthPercent="44%w"
                    android:layout_height="match_parent"
                    android:background="@drawable/white_3_bg"
                    android:gravity="center"
                    app:layout_marginLeftPercent="4%w"
                    app:layout_marginRightPercent="4%w"
                    android:text="@string/text_sleave_start_time"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/id_tvEndTime"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:layout_widthPercent="44%w"
                    android:background="@drawable/white_3_bg"
                    android:gravity="center"
                    android:layout_toRightOf="@+id/id_tvStartTime"
                    android:text="@string/text_sleave_end_time"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </cn.yc.base.view.custom.percent.PercentRelativeLayout>

            <cn.yc.base.view.custom.percent.PercentLinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                app:layout_marginTopPercent="7%w">

                <TextView
                    android:id="@+id/id_tvApply"
                    app:layout_widthPercent="80%w"
                    app:layout_heightPercent="13%w"
                    android:background="@drawable/yellow_3_bg"
                    android:gravity="center"
                    android:text="@string/text_confrim_apply"
                    android:textColor="@color/toolbar_text_color"
                    android:textSize="16sp" />

            </cn.yc.base.view.custom.percent.PercentLinearLayout>
        </cn.yc.base.view.custom.percent.PercentLinearLayout>
    </ScrollView>

</cn.yc.base.view.custom.percent.PercentLinearLayout>
