<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@color/transparent">

        <LinearLayout
            android:id="@+id/id_llInfoWindow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingStart="10dp"
            android:paddingRight="2dp"
            android:paddingEnd="2dp"
            android:paddingTop="10dp"
            android:minHeight="180dp"
            android:paddingBottom="30dp"
            android:gravity="center_vertical"
            android:background="@drawable/pop_white">
            <TextView
                android:id="@+id/id_tvConnWay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_locate_type"
                android:maxLines="1"
                android:textSize="14sp"
                android:textColor="@color/home_text_color"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"/>
            <TextView
                android:id="@+id/id_tvBaterry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_battery"
                android:maxLines="1"
                android:textSize="14sp"
                android:textColor="@color/home_text_color"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="5dp"/>
            <TextView
                android:id="@+id/id_tvStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_dev_status"
                android:maxLines="1"
                android:textSize="14sp"
                android:textColor="@color/home_text_color"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="5dp"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="5dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_loc_address"
                    android:textSize="14sp"
                    android:textColor="@color/black"/>
                <TextView
                    android:id="@+id/id_tvAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/home_text_color"
                    android:maxLines="6"
                    android:textSize="14sp"
                    android:text=""/>
            </LinearLayout>
            <TextView
                android:id="@+id/id_tvLocatTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_loc_time"
                android:maxLines="1"
                android:textSize="14sp"
                android:textColor="@color/home_text_color"
                android:padding="5dp"/>
        </LinearLayout>
</LinearLayout>