<?xml version="1.0" encoding="utf-8"?>
<cn.yc.base.view.custom.percent.PercentLinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/nav_bg"
    tools:context="cc.manbu.schoolinfocommunication.AssignHomeworkActivity">

    <include
        android:id="@+id/id_head"
        layout="@layout/layout_head"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"/>
    <cn.yc.base.view.custom.percent.PercentLinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/black3">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:gravity="center"
            app:layout_marginTopPercent="3%w"
            app:layout_marginBottomPercent="3%w"
            android:text="@string/text_realse_homework_content"/>
        <EditText
            android:id="@+id/id_edContent"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:layout_paddingLeftPercent="1%w"
            app:layout_paddingRightPercent="1%w"
            app:layout_paddingTopPercent="2%w"
            app:layout_paddingBottomPercent="2%w"
            android:background="@drawable/white_6_bg"
            android:hint="@string/hint_home_work"
            android:gravity="top|start"
            app:layout_marginLeftPercent="4%w"
            app:layout_marginRightPercent="4%w" />
        <cn.yc.base.view.custom.percent.PercentLinearLayout
            android:layout_width="match_parent"
            app:layout_heightPercent="13%w"
            app:layout_marginTopPercent="3%w"
            app:layout_marginBottomPercent="6%w"
            app:layout_marginLeftPercent="4%w"
            app:layout_marginRightPercent="4%w">
            <TextView
                android:id="@+id/id_tvClass"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="14sp"
                app:layout_marginRightPercent="4%w"
                android:background="@drawable/white_3_bg"
                android:layout_height="match_parent"
                android:text="@string/text_chose_class"/>
            <TextView
                android:id="@+id/id_tvSubject"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="14sp"
                android:background="@drawable/white_3_bg"
                android:layout_height="match_parent"
                android:text="@string/text_chose_subjects"/>
        </cn.yc.base.view.custom.percent.PercentLinearLayout>
        <TextView
            android:id="@+id/id_tvSubmit"
            app:layout_widthPercent="86%w"
            app:layout_heightPercent="13%w"
            android:textColor="@color/toolbar_text_color"
            android:textSize="16sp"
            android:gravity="center"
            android:layout_gravity="center"
            app:layout_marginTopPercent="13%w"
            app:layout_marginBottomPercent="17%w"
            android:background="@drawable/yellow_3_bg"
            android:text="@string/text_realse_homework"/>
    </cn.yc.base.view.custom.percent.PercentLinearLayout>
</cn.yc.base.view.custom.percent.PercentLinearLayout>
