<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:gravity="center_horizontal"
              android:orientation="vertical"
    android:background="@drawable/nav_bg">
    <include
        android:id="@+id/id_head"
        layout="@layout/layout_head"/>
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_centerInParent="true">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/newappicon"
                android:scaleType="centerCrop"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:text="版本:2.2"
                android:gravity="center"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="100dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center_horizontal|top"
            android:orientation="vertical"
            android:visibility="gone"
            android:padding="5dip" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/about_copy_right"
                android:textColor="#747474"
                android:textSize="16sp" />
            <TextView
                android:id="@+id/curent_vision"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/current_version"
                android:textColor="#747474"
                android:textSize="16sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/about_copy_right_time"
                android:textColor="#747474"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_right"
                android:textColor="#747474"
                android:textSize="16sp" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>
