<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="horizontal"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:padding="10dp">


    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_gravity="center_vertical"
        android:id="@+id/roundedImageView"
        android:layout_width="46dp"
        android:layout_height="46dp"
        android:src="@drawable/gray_head"
        app:civ_border_width="0dp"
        app:civ_border_color="#FF000000"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:layout_gravity="center_vertical"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="2dp"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:text="@string/name"
            android:id="@+id/id_tvName"/>

        <TextView
            android:id="@+id/id_tvNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="2dp"
            android:textColor="@color/black1"
            android:textSize="12sp"
            android:text="@string/phone_num"/>

    </LinearLayout>

    <TextView
        android:id="@+id/id_tvAdd"
        android:layout_width="65dp"
        android:layout_height="32dp"
        android:gravity="center"
        android:textColor="@color/toolbar_text_color"
        android:layout_gravity="center_vertical"
        android:background="@drawable/yellow_3_bg"
        android:text="@string/text_add"/>

</LinearLayout>